--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Build Android and iOS
 on:
   push:
     branches:
-      - master
+      - codepush
 jobs:
   install-and-test:
     runs-on: macOS-latest
