--- a/ios/loginApp/iosExportOptions.plist
+++ b/ios/loginApp/iosExportOptions.plist
@@ -2,9 +2,26 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>method</key>
-  <string>app-store</string>
-  <key>teamID</key>
-  <string>{TEAM_ID}</string>
+ <key>destination</key>
+ <string>export</string>
+ <key>method</key>
+ <string>development</string>
+ <key>provisioningProfiles</key>
+ <dict>
+  <key>F8MP8FK54B.com.phritz.ios.v2</key>
+  <string>Phritz</string>
+ </dict>
+ <key>signingCertificate</key>
+ <string>Apple Distribution: MyPhrame LLC</string>
+ <key>signingStyle</key>
+ <string>Automativ</string>
+ <key>stripSwiftSymbols</key>
+ <true/>
+ <key>teamID</key>
+ <string>F8MP8FK54B</string>
+ <key>uploadBitcode</key>
+ <true/>
+ <key>uploadSymbols</key>
+ <true/>
 </dict>
 </plist>
